# Farmers

./: Cargo.toml  README.md
farmers_backend/: Cargo.toml
farmers_backend/src/: main.rs
farmers_desktop/: Cargo.toml
