[package]
name = "farmers_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
futures-util = "0.3.28"
mime = "0.3.17"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sled = "0.34.7"
